--- a/_config.yml
+++ b/_config.yml
@@ -85,9 +85,9 @@ analytics:
 # Site Author
 author:
   name             : "Amponsah Michael"
-  avatar           : "/images/bio-pic-2.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/images/bio-pic-3.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Data Science Portfolio"
-  location         : "Ghana"
+  location         : "konongo, Ghana"
   email            :
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
